# collective-variables_testing

./: .gitignore  CONFIG.json  README.md  cluster_test.py  compute_cv_from_samples.py  create_samples.py  main.py  praktikum-md  pyproject.toml  runfile_script.py  start_testpipeline.py
analysis/: analysis.py  cv_vis.py  dashboard.py  dashboard2.py  dim_test.py  master.md  notes.md  scrap.ipynb  visualization.py
documentation/: runfile_doc.md  workflow.md
scripts/: compute_cv_from_samples.py  compute_distance_matrices.py  create_network_from_runfile.py  create_samples.py  datamanagement.py  make_mjsr_jobarray.py  pullclusterresults.sh  runfile_script.py  tocluster.sh
scripts/cluster/: get_cluster_results.sh  unify_results.py
sponet_cv_testing/: CONFIG.json  __init__.py  compute.py  create_samples.py  datamanagement.py  main.py  resultmanagement.py  runfile_doc.md  runfile_script.py  runmanagement.py  testfile_template.json  testpipeline.py  workdir.py
sponet_cv_testing/computation/: __init__.py  compute.py  run_method.py
sponet_cv_testing/computation/interpretable_cvs/: __init__.py  create_anchor_points.py  linear_regression.py  sample_cntm.py  sample_cnvm.py  transition_manifold.py
sponet_cv_testing/computation/interpretable_cvs/validation/: __init__.py  build_levelsets.py  validate_mean_var.py  validate_mmd.py  validate_random_functions.py
sponet_cv_testing/documentation/: changes.txt  datamanagement_doc.md  runfile_doc.md  workflow.md
sponet_cv_testing/scripts/: __init__.py  datamanagement.py  runfile_script.py
