[tool.poetry]
name = "sponet-cv-testing"
version = "0.1.0"
description = ""
authors = ["manuelosos <manuel.urban1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
cvxpy = "^1.3.1"
scikit-learn = "^1.2.2"

pandas = "^2.1.0"
sponet = "^2.0.0"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.7.1"
dash = "^2.13.0"
colorlover = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
